--- a/python/detection/prep.ipynb
+++ b/python/detection/prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,23 +19,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "detections 36 {'init': 'epsg:2100'}\n",
-      "search area 1 {'init': 'epsg:2100'}\n",
-      "exclusion zones 2 {'init': 'epsg:2100'}\n"
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-89-e357ca15f4c9>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-89-e357ca15f4c9>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    pts = gpd.read_file('/Users/Zack/0_GIS_Greece/sar_threshold_tests/3-notio-detections-09_12-17.geojson)\u001b[0m\n\u001b[1;37m                                                                                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
      ]
     }
    ],
    "source": [
     "#load data layers\n",
-    "pts = gpd.read_file('/Users/Zack/0_GIS_Greece/sar_threshold_tests/3-detections-notio-20_12-22.geojson')\n",
-    "#pts = gpd.read_file('/Users/Zack/Downloads/3-detections-greece_25_12-20.geojson')\n",
+    "pts = gpd.read_file('/Users/Zack/0_GIS_Greece/sar_threshold_tests/3-notio-detections-09_12-17.geojson)\n",
+    "#pts = gpd.read_file('/Users/Zack/Downloads/3-detections-greece_.geojson')\n",
+    "#pts.to_file('/Users/Zack/Desktop/d.shp')\n",
     "\n",
     "search_area = gpd.read_file('/Users/Zack/0_GIS_Greece/AOI/mask_search_area_50m_5km.shp')\n",
     "exclusion_zones = gpd.read_file('/Users/Zack/0_GIS_Greece/exclusions/exclusions.geojson')\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -66,18 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "detections within search area: 17 {'init': 'epsg:2100'}\n",
-      "Wall time: 682 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time \n",
     "#clip points to search area\n",
@@ -100,20 +91,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 2\n",
-      "Wall time: 11.9 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time \n",
     "#combine all exclusion zones\n",
@@ -123,18 +105,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "detections outside of exclusion zones: 17\n",
-      "Wall time: 2.99 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time \n",
     "#exclude points in exclusion areas\n",
@@ -158,18 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(17, 2) (1, 1)\n",
-      "Wall time: 38.3 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time \n",
     "#buffer points, dissolve buffers to aggregate points near each other\n",
@@ -180,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,18 +166,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "detections after aggregation: 17\n",
-      "Wall time: 26.5 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time \n",
     "#explode polygon and generate centroids\n",
@@ -224,14 +179,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#centroids.to_file('/Users/Zack/Desktop/c.shp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 9.09 ms\n"
+      "Wall time: 6.52 s\n"
      ]
     }
    ],
@@ -244,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {
     "scrolled": true
    },
@@ -258,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {
     "scrolled": false
    },
@@ -272,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -309,23 +273,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>POLYGON ((20.09339013363861 39.64470047416836,...</td>\n",
+       "      <td>POLYGON ((24.10868174367771 34.75288650266668,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>POLYGON ((20.10035111442952 39.65089914025802,...</td>\n",
+       "      <td>POLYGON ((24.1066156948288 34.75342539930951, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>POLYGON ((20.0698315721777 39.66155676291272, ...</td>\n",
+       "      <td>POLYGON ((24.1072444517839 34.75387458564231, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>POLYGON ((20.06624533138624 39.66591547289801,...</td>\n",
+       "      <td>POLYGON ((24.11101712411021 34.75459340832069,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>POLYGON ((20.0520422626227 39.66569691431548, ...</td>\n",
+       "      <td>POLYGON ((24.10248354967907 34.75522184545049,...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -333,14 +297,14 @@
       ],
       "text/plain": [
        "                                            geometry\n",
-       "0  POLYGON ((20.09339013363861 39.64470047416836,...\n",
-       "1  POLYGON ((20.10035111442952 39.65089914025802,...\n",
-       "2  POLYGON ((20.0698315721777 39.66155676291272, ...\n",
-       "3  POLYGON ((20.06624533138624 39.66591547289801,...\n",
-       "4  POLYGON ((20.0520422626227 39.66569691431548, ..."
+       "0  POLYGON ((24.10868174367771 34.75288650266668,...\n",
+       "1  POLYGON ((24.1066156948288 34.75342539930951, ...\n",
+       "2  POLYGON ((24.1072444517839 34.75387458564231, ...\n",
+       "3  POLYGON ((24.11101712411021 34.75459340832069,...\n",
+       "4  POLYGON ((24.10248354967907 34.75522184545049,..."
       ]
      },
-     "execution_count": 31,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 97,
    "metadata": {
     "scrolled": true
    },
@@ -409,7 +373,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total coordinates (5 per detection): 85\n"
+      "total coordinates (5 per detection): 239350\n"
      ]
     },
     {
@@ -441,32 +405,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>20.093390133638607</td>\n",
-       "      <td>39.64470047416836</td>\n",
+       "      <td>24.108681743677707</td>\n",
+       "      <td>34.752886502666684</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>20.105017978628698</td>\n",
-       "      <td>39.645091542318376</td>\n",
+       "      <td>24.11960765462237</td>\n",
+       "      <td>34.75287626246345</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>20.104512764237462</td>\n",
-       "      <td>39.6540809708806</td>\n",
+       "      <td>24.119620658303557</td>\n",
+       "      <td>34.76189402286251</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>20.092883420358827</td>\n",
-       "      <td>39.6536897786341</td>\n",
+       "      <td>24.108693559505593</td>\n",
+       "      <td>34.76190426648716</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>20.093390133638607</td>\n",
-       "      <td>39.64470047416836</td>\n",
+       "      <td>24.108681743677707</td>\n",
+       "      <td>34.752886502666684</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -475,14 +439,14 @@
       ],
       "text/plain": [
        "                    x                   y  id\n",
-       "0  20.093390133638607   39.64470047416836   0\n",
-       "1  20.105017978628698  39.645091542318376   0\n",
-       "2  20.104512764237462    39.6540809708806   0\n",
-       "3  20.092883420358827    39.6536897786341   0\n",
-       "4  20.093390133638607   39.64470047416836   0"
+       "0  24.108681743677707  34.752886502666684   0\n",
+       "1   24.11960765462237   34.75287626246345   0\n",
+       "2  24.119620658303557   34.76189402286251   0\n",
+       "3  24.108693559505593   34.76190426648716   0\n",
+       "4  24.108681743677707  34.752886502666684   0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,26 +475,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total detections: 36\n",
-      "detections in search area: 17\n",
-      "farm sites: 21\n",
-      "matches: 14\n",
-      "positive matches 0.667\n",
-      "overall accuracy 0.824\n"
+      "total detections: 559695\n",
+      "detections in search area: 47870\n",
+      "farm sites: 252\n",
+      "matches: 175\n",
+      "positive matches 0.694\n",
+      "overall accuracy 0.004\n"
      ]
     }
    ],
    "source": [
     "#accuracy check\n",
-    "#farm_sites = gpd.read_file('/Users/Zack/0_GIS_Greece/blue_bridge/fishcages_Greece_farm_polygons.shp')\n",
-    "farm_sites = gpd.read_file('/Users/Zack/0_GIS_Greece/sar_threshold_tests/farmsites_notio.shp')\n",
+    "farm_sites = gpd.read_file('/Users/Zack/0_GIS_Greece/blue_bridge/fishcages_Greece_farm_polygons.shp')\n",
+    "#farm_sites = gpd.read_file('/Users/Zack/0_GIS_Greece/sar_threshold_tests/farmsites_notio.shp')\n",
     "\n",
     "centroids_test = centroids.copy()\n",
     "centroids_test.crs = {'init' :'epsg:2100'}\n",
