--- a/python/detection/prep.ipynb
+++ b/python/detection/prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,14 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "detections 571273 {'init': 'epsg:2100'}\n",
+      "detections 10041 {'init': 'epsg:2100'}\n",
       "search area 1 {'init': 'epsg:2100'}\n",
       "exclusion zones 2 {'init': 'epsg:2100'}\n"
      ]
@@ -35,12 +35,8 @@
    "source": [
     "#load data layers\n",
     "#pts = gpd.read_file('/Users/Zack/Downloads/detections-greece_25_12-25-comp.geojson')\n",
-    "#pts = gpd.read_file('/Users/Zack/0_GIS_Greece/sar_tests_greece/detections-greece_15_12-20.geojson')\n",
-    "#pts = gpd.read_file('/Users/Zack/0_GIS_Greece/sar_tests_greece/detections-greece_17_12-24.geojson')\n",
-    "#pts = gpd.read_file('/Users/Zack/0_GIS_Greece/sar_tests_greece/detections-greece_175_12-25.geojson')\n",
-    "#pts = gpd.read_file('/Users/Zack/0_GIS_Greece/sar_tests_greece/detections-greece_18_12_25.geojson')\n",
-    "pts = gpd.read_file('/Users/Zack/0_GIS_Greece/sar_tests_greece/detections-greece_165_12-25.geojson')\n",
-    "#pts = gpd.read_file('/Users/Zack/0_GIS_Greece/sar_tests_greece/detections-greece_25_12-24.geojson')\n",
+    "pts = gpd.read_file(\n",
+    "    '/Users/Zack/0_GIS_Greece/sar_tests_greece/detections-greece_g25_100m_01-04.geojson')\n",
     "\n",
     "search_area = gpd.read_file('/Users/Zack/0_GIS_Greece/AOI/mask_search_area_50m_5km.shp')\n",
     "exclusion_zones = gpd.read_file('/Users/Zack/0_GIS_Greece/exclusions/exclusions.geojson')\n",
@@ -57,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 134,
    "metadata": {
     "scrolled": false
    },
@@ -71,15 +67,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "detections within search area: 50756\n",
-      "Wall time: 19.6 s\n"
+      "detections within search area: 9964\n",
+      "Wall time: 1.77 s\n"
      ]
     }
    ],
@@ -92,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 136,
    "metadata": {
     "scrolled": true
    },
@@ -105,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 137,
    "metadata": {
     "scrolled": true
    },
@@ -114,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 11 ms\n"
+      "Wall time: 24.2 ms\n"
      ]
     }
    ],
@@ -127,15 +123,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "detections outside of exclusion zones: 48353\n",
-      "Wall time: 984 ms\n"
+      "detections outside of exclusion zones: 9268\n",
+      "Wall time: 303 ms\n"
      ]
     }
    ],
@@ -149,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 139,
    "metadata": {
     "scrolled": true
    },
@@ -162,28 +158,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 2min 21s\n"
+      "Wall time: 1.55 s\n"
      ]
     }
    ],
    "source": [
     "%%time \n",
     "#buffer points, dissolve buffers to aggregate points near each other\n",
-    "buffer = gpd.GeoDataFrame(geometry = clip2.buffer(5)) #250 meters\n",
+    "buffer = gpd.GeoDataFrame(geometry = clip2.buffer(1)) #250 meters\n",
     "buffer['Dissolve'] = 0\n",
     "buffer_dis = buffer.dissolve(by='Dissolve')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,15 +201,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "detections after aggregation: 48282\n",
-      "Wall time: 1min 27s\n"
+      "detections after aggregation: 9268\n",
+      "Wall time: 10.9 s\n"
      ]
     }
    ],
@@ -227,14 +223,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 3.29 s\n"
+      "Wall time: 1.91 s\n"
      ]
     }
    ],
@@ -247,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 144,
    "metadata": {
     "scrolled": true
    },
@@ -261,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 145,
    "metadata": {
     "scrolled": false
    },
@@ -275,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -312,23 +308,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>POLYGON ((24.10868174367771 34.75288650266668,...</td>\n",
+       "      <td>POLYGON ((24.10679571239714 34.78183287542174,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>POLYGON ((24.1066156948288 34.75342539930951, ...</td>\n",
+       "      <td>POLYGON ((24.11675510478788 34.79630003200409,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>POLYGON ((24.1072444517839 34.75387458564231, ...</td>\n",
+       "      <td>POLYGON ((24.11523618957257 34.79672462205158,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>POLYGON ((24.11101712411021 34.75459340832069,...</td>\n",
+       "      <td>POLYGON ((24.12060116117349 34.79868074297102,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>POLYGON ((24.10248354967907 34.75522184545049,...</td>\n",
+       "      <td>POLYGON ((24.11080457314737 34.7992625216954, ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -336,14 +332,14 @@
       ],
       "text/plain": [
        "                                            geometry\n",
-       "0  POLYGON ((24.10868174367771 34.75288650266668,...\n",
-       "1  POLYGON ((24.1066156948288 34.75342539930951, ...\n",
-       "2  POLYGON ((24.1072444517839 34.75387458564231, ...\n",
-       "3  POLYGON ((24.11101712411021 34.75459340832069,...\n",
-       "4  POLYGON ((24.10248354967907 34.75522184545049,..."
+       "0  POLYGON ((24.10679571239714 34.78183287542174,...\n",
+       "1  POLYGON ((24.11675510478788 34.79630003200409,...\n",
+       "2  POLYGON ((24.11523618957257 34.79672462205158,...\n",
+       "3  POLYGON ((24.12060116117349 34.79868074297102,...\n",
+       "4  POLYGON ((24.11080457314737 34.7992625216954, ..."
       ]
      },
-     "execution_count": 38,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 149,
    "metadata": {
     "scrolled": true
    },
@@ -412,7 +408,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total coordinates (5 per detection): 241410\n"
+      "total coordinates (5 per detection): 46340\n"
      ]
     },
     {
@@ -444,32 +440,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>24.108681743677707</td>\n",
-       "      <td>34.752886502666684</td>\n",
+       "      <td>24.106795712397137</td>\n",
+       "      <td>34.78183287542174</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>24.11960765462237</td>\n",
-       "      <td>34.75287626246345</td>\n",
+       "      <td>24.117725438882974</td>\n",
+       "      <td>34.781822796962686</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>24.119620658303557</td>\n",
-       "      <td>34.76189402286251</td>\n",
+       "      <td>24.117738251722326</td>\n",
+       "      <td>34.790840514813304</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>24.108693559505593</td>\n",
-       "      <td>34.76190426648716</td>\n",
+       "      <td>24.106807335687744</td>\n",
+       "      <td>34.79085059663842</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>24.108681743677707</td>\n",
-       "      <td>34.752886502666684</td>\n",
+       "      <td>24.106795712397137</td>\n",
+       "      <td>34.78183287542174</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -478,14 +474,14 @@
       ],
       "text/plain": [
        "                    x                   y  id\n",
-       "0  24.108681743677707  34.752886502666684   0\n",
-       "1   24.11960765462237   34.75287626246345   0\n",
-       "2  24.119620658303557   34.76189402286251   0\n",
-       "3  24.108693559505593   34.76190426648716   0\n",
-       "4  24.108681743677707  34.752886502666684   0"
+       "0  24.106795712397137   34.78183287542174   0\n",
+       "1  24.117725438882974  34.781822796962686   0\n",
+       "2  24.117738251722326  34.790840514813304   0\n",
+       "3  24.106807335687744   34.79085059663842   0\n",
+       "4  24.106795712397137   34.78183287542174   0"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,19 +510,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
+   "execution_count": 151,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total detections: 571273\n",
-      "detections in search area: 48282\n",
+      "total detections: 10041\n",
+      "detections in search area: 9268\n",
       "farm sites: 252\n",
-      "matches: 171\n",
-      "positive matches 0.679\n",
-      "overall accuracy 0.004\n"
+      "matches: 353\n",
+      "positive matches 1.401\n",
+      "overall accuracy 0.038\n"
      ]
     }
    ],
@@ -560,21 +558,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 152,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'init': 'epsg:4326'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "centroids.crs = {'init' :'epsg:4326'}\n",
-    "print(centroids.crs)\n",
-    "#centroids.to_file('/Users/Zack/Desktop/test3.shp')"
+    "centroids_test.to_file('/Users/Zack/0_GIS_Greece/sar_tests_greece/detections-greece_g25_100m_01-04.shp')"
    ]
   }
  ],
